--- a/spam.ipynb
+++ b/spam.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "278b450f-f909-450b-9cc0-73915680e954",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "83e28902-0f0f-44d0-b628-a38ca2ed1654",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "0ff12bb8-d59c-4db1-9192-6fdb90fdffbe",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a7b6aa9c-a0dc-440f-83ab-3a055ee44100",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "c7133f34-5409-493f-8077-321ed8217b23",
    "metadata": {},
    "outputs": [
@@ -833,7 +833,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "ff0302c6-d098-4505-8525-be69a83a9570",
    "metadata": {},
    "outputs": [],
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "07276bd1-ff11-42fb-bca2-dd76368ca411",
    "metadata": {},
    "outputs": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "b02b386f-e685-48da-8522-142e51f14e6e",
    "metadata": {},
    "outputs": [],
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "40355db0-6b71-47d2-8cb0-4a17d9e67f33",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "6b84b496-c170-4893-8e55-e61eaf315d89",
    "metadata": {},
    "outputs": [
@@ -915,13 +915,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n",
-      "Ham mail\n"
+      "[0]\n",
+      "Spam mail\n"
      ]
     }
    ],
    "source": [
-    "input_mail = [\"\"]\n",
+    "input_mail = [\"URGENT! You have won a 1 week FREE membership in our £100,000 Prize Jackpot! Txt the word: CLAIM to No: 81010 T&C www.dbuk.net LCCLTD POBOX 4403LDNW1A7RW18\"]\n",
     "\n",
     "# convert text to feature vectors\n",
     "input_data_features = feature_extraction.transform(input_mail)\n",
